[package]
name = "onload"
version = "0.1.2"
edition = "2021"
authors = ["somewheve <somewheve@gmail.com>"]
repository = "https://github.com/HFQR/onload"
keywords = ["solarflare", "ffi", "bindings" ]
description = "binding to solarflare onload libarary."
license = "MIT"

build = "build.rs"

[build-dependencies]
bindgen = {version="0.60", optional= true}

[features]
default = ["debug"]
debug = ["bindgen"]
release = []
