[package]
name = "onload"
version = "0.3.0"
edition = "2021"
authors = ["somewheve <somewheve@gmail.com>"]
repository = "https://github.com/HFQR/onload"
keywords = ["solarflare", "ffi", "bindings"]
description = "binding to solarflare onload libarary."
license = "MIT"

build = "build.rs"

[build-dependencies]
bindgen = { version = "*", optional = true }

[features]
default = ["9"]
9 = []
8 = []
debug = ["bindgen"]
